--- a/1110.2346/EJP_v1_MathieuBeau_14March2012_HAL.tex
+++ b/1110.2346/EJP_v1_MathieuBeau_14March2012_HAL.tex
@@ -1,11 +1,46 @@
 \documentclass[12pt,aps,prb,preprint]{revtex4-1}   % style for Physical Review B and AJP are similar
 
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={7.2in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/mnsymbol.tex}
+\input{../helpers/fix-underbrace.tex}
+
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+
 \usepackage{amsmath}    % need for subequations
 %\usepackage{amsfonts}  note how statements can be commented out
 %\usepackage{amssymb}
 \usepackage{graphicx}   % for figures
 
 \newcommand{\ajp}{AJP}  % example of a definition of a macro
+\linespread{1.05}
+\raggedbottom
 
 \begin{document}
 
@@ -15,10 +50,7 @@
  \affiliation{School of Theoretical Physics, Dublin Institute for Advanced Studies, 10 Burlington Road,
 Dublin 4}
  \email{mbeau@stp.dias.ie}  
-\date{\today}
-
-
-
+\date{15 Mar 2012}
 
 \begin{abstract}
 
@@ -259,8 +291,8 @@ K_0^{(n)}&&(x_n,t_n;x_0,t_0)\equiv
 {}\nonumber{}\\{}&&\frac{1}{\sqrt{2i\pi \hbar\epsilon/m}}\int_{-\infty}^{\infty}
 \frac{dx_1}{\sqrt{2i\pi \hbar\epsilon/m}}
 \ldots\int_{-\infty}^{\infty}\frac{dx_{n-1}}{\sqrt{2i\pi \hbar\epsilon/m}}
-\exp{\left(i\sum_{j=1}^{n}(\frac{m(x_{j}-x_{j-1})^2}{2\hbar\epsilon})
-\right)}\ .
+\exp{\bigl(i\sum_{j=1}^{n}(\frac{m(x_{j}-x_{j-1})^2}{2\hbar\epsilon})
+\bigr)}.
 \end{eqnarray}
 We perform the integration one stage at a time (from $j=1$ to $j=n-1$),
 using the well known formula for the convolution of two Gaussians.
@@ -317,7 +349,7 @@ Then we can reduce the dimension of the propagator (\ref{K3D}) by integrating ov
 K_{0}^{(2D)}(\overrightarrow{r}',t';\overrightarrow{r},t)&=&
 \int_{-\infty}^{\infty}dy\ K_{0}^{(3D)}(\overrightarrow{x}',t';\overrightarrow{x},t)
 {}\nonumber\\{}&=&\frac{m}{2i\pi\hbar(t'-t)}
-e^{i\frac{m|\overrightarrow{r}'-\overrightarrow{r}|^2}{2\hbar(t'-t)}}\ ,  
+e^{i\frac{m|\overrightarrow{r}'-\overrightarrow{r}|^2}{2\hbar(t'-t)}},  
 \end{eqnarray}
 where $\overrightarrow{r}=(x,z)$ is the position vector in the two dimensional plane orthogonal to the $y$-axis.
 
@@ -346,7 +378,7 @@ probability curve for an electron by the number of electrons
 emitted per unit time.
 {As explained above formula (\ref{Klim}),
 the probability is given by the square of the amplitude which 
-we will compute using the propagator (\ref{K3D}).}\\
+we will compute using the propagator (\ref{K3D}).}
 
 As explained in (\ref{K2D}), we now take $d=2$.
 In fact, we now argue that we can reduce the dimension further. 
@@ -418,19 +450,19 @@ Then we can reduce the dimension of the problem keeping only the $x$-axis
 propagator, as you can see in the References\cite{FH},\cite{Frabboni}.
 In the Reference,\cite{Frabboni} they consider the slits in 
 the $x$-$y$-plane, in two-dimensions and not in one-dimension 
-as we do in the present article.\\
+as we do in the present article.
 
 If we take the limit $a\rightarrow\infty$ (infinite slit), 
 by (\ref{K2DFormula}) and by (\ref{GaussianConvo}) we get:
-\begin{eqnarray*}
-K_{\infty}^{(2D)}((x,L+D),T+\tau;(0,0),0)&=&\frac{e^{i\frac{mD^2}{2\hbar T}}}{\sqrt{2i\pi\hbar T/m}} 
-\frac{e^{i\frac{m L^2}{2\hbar\tau}}}{\sqrt{2i\pi\hbar\tau/m}}
-\int_{-\infty}^{\infty}dw\ \frac{e^{i\frac{m (x-w)^2}{2\hbar\tau}}}{\sqrt{2i\pi\hbar\tau/m}}
+\begin{align*}
+K_{\infty}^{(2D)}((x,L+D),T+\tau;(0,0),0)&=\frac{e^{i\frac{mD^2}{2\hbar T}}}{\sqrt{2i\pi\hbar T/m}} 
+\frac{e^{i\frac{m L^2}{2\hbar\tau}}}{\sqrt{2i\pi\hbar\tau/m}}\times \\
+& \qquad \times \int_{-\infty}^{\infty}dw\ \frac{e^{i\frac{m (x-w)^2}{2\hbar\tau}}}{\sqrt{2i\pi\hbar\tau/m}}
 \frac{e^{i\frac{m w^2}{2\hbar T}}}{\sqrt{2i\pi\hbar T/m}}
-{}\\{}&=&\frac{e^{i\frac{mD^2}{2\hbar T}}}{\sqrt{2i\pi\hbar T/m}} 
+{}\\{}&=\frac{e^{i\frac{mD^2}{2\hbar T}}}{\sqrt{2i\pi\hbar T/m}} 
 \frac{e^{i\frac{m L^2}{2\hbar\tau}}}{\sqrt{2i\pi\hbar\tau/m}}
 \frac{e^{i\frac{m x^2}{2\hbar (T+\tau)}}}{\sqrt{2i\pi\hbar (T+\tau/m)}}\ .
-\end{eqnarray*}
+\end{align*}
 Then we find the amplitude corresponding to the transition
 between the position $(x=0,z=0)$ at the time $t=0$ 
 and the position $(x,z=L+D)$ at the time $t=T+\tau$, 
@@ -505,8 +537,8 @@ and hence,
 A_1(x;a,b)&=&\frac{e^{i\frac{mx^2}{2\hbar
 (T+\tau)}}}{\sqrt{2i\pi \hbar (T+\tau)/m}}\int_{b-a}^{b+a} dw
 \sqrt{\frac{T+\tau}{2i\pi \hbar
-T\tau/m}}\exp{\left(i(\frac{T+\tau}{2\hbar
-T\tau/m})(w-\frac{x}{1+\tau/T})^2\right)}  \ .
+T\tau/m}}\exp{\bigl(i(\frac{T+\tau}{2\hbar
+T\tau/m})(w-\frac{x}{1+\tau/T})^2\bigr)}
 {}\nonumber\\{}&=&\frac{e^{i\frac{mx^2}{2\hbar
 (T+\tau)}}}{\sqrt{(2i)^2\pi \hbar
 (T+\tau)/m}}\int_{\alpha_{-}^{(1)}(x)}^{\alpha_{+}^{(1)}(x)} dw'
@@ -529,15 +561,15 @@ integrals are the well-known \textit{Fresnel functions}
 S[u]\equiv\int_0^u dw \sin{(\frac{\pi w^2}{2})}\ .
 \end{eqnarray*}
 Thus we obtain explicit analytical expressions for the amplitudes:
-\begin{eqnarray}\label{A1C2}
- A_1(x;a,b)&&=\frac{e^{i\frac{m x^2}{2\hbar
-(\tau+T)}}}{\sqrt{(2i)^2\pi \hbar (T+\tau)/m}} \times
-{}\nonumber\\{}&&\big(C[\alpha_{+}(x;a,b)] - C[\alpha_{-}(x;a,b)] +
-iS[\alpha_{+}(x;a,b)] - iS[\alpha_{-}(x;a,b)] \big)\ ,
-\end{eqnarray}
-\begin{eqnarray}\label{A2C2}
-A_2(x;a,b)&=&A_1(x;a,-b)\ .
-\end{eqnarray}
+\begin{align}\label{A1C2}
+ A_1(x;a,b)&=\frac{e^{i\frac{m x^2}{2\hbar
+(\tau+T)}}}{\sqrt{(2i)^2\pi \hbar (T+\tau)/m}}\bigl(C[\alpha_{+}(x;a,b)] - C[\alpha_{-}(x;a,b)] +\bigr. \nonumber\\
+& \qquad\qquad\qquad\qquad\qquad\qquad + iS[\alpha_{+}(x;a,b)] - iS[\alpha_{-}(x;a,b)] \bigr)\ ,
+\end{align}
+and
+\begin{align}\label{A2C2}
+A_2(x;a,b)&=A_1(x;a,-b)\ .
+\end{align}
 {For two slits, we can compute the total amplitude by summing the amplitudes for both slits:
 \begin{eqnarray}\label{A}
 A(x;a,b)=A_1(x;a,b)+A_2(x;a,b)\ .
@@ -563,11 +595,11 @@ where $N_F(a)=2a^2/\lambda L$ is the \textit{Fresnel number}.
 
 We can now easily compute the single-slit diffraction
 probability:
-\begin{eqnarray}\label{P1}
-&&P^{(1Slit)}(x;a) = |A_1(x;a,b=0)|^2
-{}\nonumber\\{}&=&\frac{1}{2\lambda(L+D)} \left([C(\alpha(x;a)) +
+\begin{align}\label{P1}
+P^{(1Slit)}(x;a) &= |A_1(x;a,b=0)|^2
+{}\nonumber\\{}&=\frac{1}{2\lambda(L+D)} \left([C(\alpha(x;a)) +
 C(\alpha(x;-a))]^2 + [S(\alpha(x;a)) + S(\alpha(x;-a))]^2 \right)\ .
-\end{eqnarray}
+\end{align}
 
 Let us introduce the following parameters $\eta\equiv 1+L/D$ and
 $\gamma=\eta-1$. We can then plot the functions (\ref{P1}) for
@@ -592,17 +624,17 @@ we get the asymptotic behavior for the functions defined by (\ref{alpha}):
 \end{eqnarray}
 and so by (\ref{ApproxCS}) and (\ref{alphasympt0}),
 the asymptotics formulas of the Fresnel functions in (\ref{P1}) are given by:
-\begin{eqnarray}\label{CSasympt1}
-&& C[\alpha(x;\pm a)]\simeq \pm\frac{1}{2} + \frac{1}{\pi\alpha(x;\pm a)}\sin{(\frac{\pi\alpha(x;\pm a)^2}{2})},
-{}\nonumber\\{}&& S[\alpha(x;\pm a)]\simeq \pm\frac{1}{2} - \frac{1}{\pi\alpha(x;\pm a)}\sin{(\frac{\pi\alpha(x;\pm a)^2}{2})}\ .
-\end{eqnarray}}
+\begin{align}\label{CSasympt1}
+C[\alpha(x;\pm a)] &\simeq \pm\frac{1}{2} + \frac{1}{\pi\alpha(x;\pm a)}\sin{(\frac{\pi\alpha(x;\pm a)^2}{2})},
+{}\nonumber\\{} S[\alpha(x;\pm a)] &\simeq \pm\frac{1}{2} - \frac{1}{\pi\alpha(x;\pm a)}\sin{(\frac{\pi\alpha(x;\pm a)^2}{2})}\ .
+\end{align}}
 {Then we get:
-\begin{eqnarray}\label{FresnelFunctionApprox}
-&& C[\alpha(x;+a)]+C[\alpha(x;-a)]\simeq \frac{1}{\pi\alpha(x;a)}\sin{(\frac{\pi\alpha(x;a)^2}{2})}
+\begin{align}\label{FresnelFunctionApprox}
+ C[\alpha(x;+a)]+C[\alpha(x;-a)] &\simeq \frac{1}{\pi\alpha(x;a)}\sin{(\frac{\pi\alpha(x;a)^2}{2})}
 +\frac{1}{\pi\alpha(x;-a)}\sin{(\frac{\pi\alpha(x;-a)^2}{2})},
-{}\nonumber\\{}&& S[\alpha(x;+a)]+S[\alpha(x;-a)]\simeq \frac{-1}{\pi\alpha(x;a)}\cos{(\frac{\pi\alpha(x;a)^2}{2})}
+{}\nonumber\\{} S[\alpha(x;+a)]+S[\alpha(x;-a)] &\simeq \frac{-1}{\pi\alpha(x;a)}\cos{(\frac{\pi\alpha(x;a)^2}{2})}
 -\frac{1}{\pi\alpha(x;-a)}\cos{(\frac{\pi\alpha(x;-a)^2}{2})}
-\end{eqnarray}}
+\end{align}}
 
 
 Applying the Fresnel function asymptotic forms (\ref{FresnelFunctionApprox}) to
@@ -638,20 +670,21 @@ the position of the first lobe is well approximated by  equations
 
 On the contrary, if $N_F(a)\gg 1$, we get different asymptotics
 given by:
-\begin{eqnarray}\label{P1ApproxNFhigh}
-&&P^{(1
-Slit)}(x)\simeq\frac{\gamma}{\eta}\left(\frac{\sqrt{N_F(a)}}{2a}+
+\begin{align}\label{P1ApproxNFhigh}
+P^{(1
+Slit)}(x) & \simeq\frac{\gamma}{\eta}\left(\frac{\sqrt{N_F(a)}}{2a}+
 \frac{\sin{(\frac{\pi}{2}N_F(a)\eta(1-\frac{x}{a\eta})^2)}}{2\pi\sqrt{\eta}(a-\frac{x}{\eta})}
 +\frac{\sin{(\frac{\pi}{2}N_F(a)\eta(1+\frac{x}{a\eta})^2)}}{2\pi\sqrt{\eta}(a+\frac{x}{\eta})}\right)^2
-{}\nonumber\\{}&+&\frac{\gamma}{\eta}\left(\frac{\sqrt{N_F(a)}}{2a}-
+{}\nonumber\\{}&+\frac{\gamma}{\eta}\left(\frac{\sqrt{N_F(a)}}{2a}-
 \frac{\cos{(\frac{\pi}{2}N_F(a)\eta(1-\frac{x}{a\eta})^2)}}{2\pi\sqrt{\eta}(a-\frac{x}{\eta})}
--\frac{\cos{(\frac{\pi}{2}N_F(a)\eta(1+\frac{x}{a\eta})^2)}}{2\pi\sqrt{\eta}(a+\frac{x}{\eta})}\right)^2,\ |x|<a\eta,
-\end{eqnarray}
-\begin{eqnarray}\label{P1ApproxNFhigh2}
-P^{(1 Slit)}(x)&&
+-\frac{\cos{(\frac{\pi}{2}N_F(a)\eta(1+\frac{x}{a\eta})^2)}}{2\pi\sqrt{\eta}(a+\frac{x}{\eta})}\right)^2 \nonumber\\
+& \quad {\rm where} \ |x|<a\eta,
+\end{align}
+\begin{align}\label{P1ApproxNFhigh2}
+P^{(1 Slit)}(x)&
 \simeq\frac{2\gamma}{\pi^2\eta^2}\left(\frac{a^2}{(\frac{x^2}{\eta^2}-a^2)^2}+\frac{1}{\frac{x^2}{\eta^2}-a^2}\sin^2{(\pi
 N_F(a) \frac{x}{a})}\right) ,\ |x|>a\eta\ ,
-\end{eqnarray}
+\end{align}
 since the asynptotic behavior of the functions (\ref{alpha}) are:
 \begin{eqnarray}
 &&\alpha(x;\pm a)\gg1,\ \mathrm{if}\ N_F(a)\gg1\ \mathrm{and}\ |x|<a\eta\ ,\label{alphasympt1}
@@ -685,10 +718,10 @@ rapidly to $0$. Hence $P^{(1 Slit)}$ tends at large $N_F(a)$ to
 the \lq door\rq\ function defined by (\ref{Porte}), as might have
 been expected, see Fig. 3c.
 
-\begin{figure}[h]
+\begin{figure}[ht]
 \begin{center}
-\scalebox{1}{\includegraphics{F01.eps}}\scalebox{1}{\includegraphics{F02.eps}}
-\scalebox{1}{\includegraphics{F03.eps}} \caption{\label{Fig.2}
+\scalebox{.8}{\includegraphics{F01.eps}}\scalebox{.8}{\includegraphics{F02.eps}}
+\scalebox{.8}{\includegraphics{F03.eps}} \caption{\label{Fig.2}
 Diffraction curve for a single-slit, with $\eta=2$. The
 abscissae are the distances in units of $a$ and the ordinates
 are the relative populations. We have $N_F(a)=0.01$ for the
@@ -767,18 +800,18 @@ is a normalized Gaussian of variance $\sigma\sqrt{2}$, and hence
 $g_{\sigma\sqrt{2}}(x_0) \rightarrow \delta(x_0),\
 \sigma\rightarrow0$. Multiplying top and bottom of
 (\ref{wavefunction}) by $(8\pi \sigma^2)^{1/2}$ we thus have
-\begin{eqnarray}
-&\lim_{\sigma\rightarrow0}&P_\sigma\left(x\in A,T+\tau|y\in
-[-a,+a],T\right)= {}\nonumber\\{}&&=\lim_{\sigma\rightarrow 0}
+\begin{align}
+\lim_{\sigma\rightarrow 0}P_\sigma\left(x\in A,T+\tau|y\in
+[-a,+a],T\right) &= \lim_{\sigma\rightarrow 0}
 \frac{(8\pi\sigma^2)^{-1/2}
 |\Psi_\sigma(x,T+\tau)|^2}{(8\pi\sigma^2)^{-1/2}\int_{-a}^{+a}dy
-|\phi_\sigma(y,T)|^2}\ , {}\nonumber\\{}&&= \frac{\left| \int dx_0
+|\phi_\sigma(y,T)|^2} {}\nonumber\\ &= \frac{\left| \int dx_0
 K(x,T+\tau; x_0,0) g_{\sigma \sqrt{2}}(x_0) \right|^2}{\int_{-a}^a
 dy\, \left| \int dx_0 K_0(y,T;x_0,0) g_{\sigma \sqrt{2}} (x_0)
-\right|^2} {}\nonumber\\{}&&= \frac{
+\right|^2} {}\nonumber\\ &= \frac{
 |K(x,T+\tau;0,0)|^2}{\int_{-a}^{+a} dy |K_0(y,T;0,0)|^2}
-{}\nonumber\\{}&&=\frac{\lambda L}{2a}  P^{1 Slit}(x;a)\ ,
-\end{eqnarray}
+{}\nonumber\\{}&=\frac{\lambda L}{2a}  P^{1 Slit}(x;a)\ ,
+\end{align}
 where \begin{equation} \label{propagator} K(x,T+\tau;0,0) =
 \int_{-a}^{+a} dy\, K_0(x,T+\tau;y,T) K_0(y,T;0,0) \end{equation}
 is the propagator through the slit and $P^{(1 Slit)}(x;a) =
@@ -800,12 +833,12 @@ L\eta}\left([C(\alpha_{+}(x;a,b))-C(\alpha_{-}(x;a,b))]^2+[S(\alpha_{+}(x;a,b))-
 , {}\nonumber\\{}&& P_2(x;a,b) = |A_2(x;a,b)|^2 = P_1(x;a,-b)\ ,
 \end{eqnarray}
 and the interference term :
-\begin{eqnarray}\label{I12}
-I_{12}(x;a,b)&=&A_1(x;a,b)A_2(x;a,b)^* + A_2(x;a,b) A_1(x;a,b)^*
-{}\nonumber\\{}&=&\frac{\gamma}{\lambda L\eta}
-([C(\alpha_{+}(x;a,b))-C(\alpha_{-}(x;a,b))][C(\alpha_{+}(x;a,-b))-C(\alpha_{-}(x;a,-b))]
-{}\nonumber\\{}&+&[S(\alpha_{+}(x;a,b))-S(\alpha_{-}(x;a,b))][S(\alpha_{+}(x;a,-b))-S(\alpha_{-}(x;a,-b))])\ .
-\end{eqnarray}
+\begin{align}\label{I12}
+I_{12}(x;a,b)&=A_1(x;a,b)A_2(x;a,b)^* + A_2(x;a,b) A_1(x;a,b)^*
+{}\nonumber\\{}&=\frac{\gamma}{\lambda L\eta}
+([C(\alpha_{+}(x;a,b))- C(\alpha_{-}(x;a,b))][C(\alpha_{+}(x;a,-b))- \nonumber\\ & \quad\quad - C(\alpha_{-}(x;a,-b))]
+{}\nonumber\\{}&+[S(\alpha_{+}(x;a,b))-S(\alpha_{-}(x;a,b))][S(\alpha_{+}(x;a,-b))- \nonumber\\ & \quad\quad\, - S(\alpha_{-}(x;a,-b))])\ .
+\end{align}
 Notice that there is an additional term compared to the
 single-slit case called the \textit{interference term}, which is
 of course quite similar to that in optics.\cite{Optics} This
@@ -833,18 +866,18 @@ and at large scales $|x-b\eta|\gg a\eta$ et $|x+b\eta|\gg
 a\eta$, we get  similar expressions for $P_1(x;a,b)$ and
 $P_2(x;a,b)$ as (\ref{P1ApproxNFsmall}). We have to compute the
 asymptotic expression for the interference term. This yields
-\begin{eqnarray}\label{P2slApprox}
-P^{(2 Slit)}(x;a,b)&\simeq&\frac{2\gamma}{\pi^2 (x-b\eta)^2}
-\sin^2{\left(\pi N_F\eta(1-\frac{x}{b\eta})\right)}
-+\frac{2\gamma}{\pi^2 (x+b\eta)^2} \sin^2{\left(\pi
-N_F\eta(1+\frac{x}{b\eta})\right)}
-{}\nonumber\\{}&-&\frac{\gamma}{\pi^2 (x^2-b^2\eta^2)}
-\left(\cos{(2\pi (N_F+N_F(a))\frac{x}{a})}-\cos{(2\pi
-N_F\eta(1+\frac{x}{a\eta}))}\right)
-{}\nonumber\\{}&-&\frac{\gamma}{\pi^2 (x^2-b^2\eta^2)}
-\left(\cos{(2\pi (N_F-N_F(a))\frac{x}{a})}-\cos{(2\pi
-N_F\eta(1-\frac{x}{a\eta}))}) \right)\ .
-\end{eqnarray}
+\begin{align}\label{P2slApprox}
+P^{(2 Slit)}(x;a,b)&\simeq\frac{2\gamma}{\pi^2 (x-b\eta)^2}
+\sin^2{\bigl(\pi N_F\eta(1-\frac{x}{b\eta})\bigr)}
++\nonumber\\ & \qquad + \frac{2\gamma}{\pi^2 (x+b\eta)^2} \sin^2{\bigl(\pi
+N_F\eta(1+\frac{x}{b\eta})\bigr)}
+{}\nonumber\\{}&-\frac{\gamma}{\pi^2 (x^2-b^2\eta^2)}
+\bigl(\cos{(2\pi (N_F+N_F(a))\frac{x}{a})}- \cos{(2\pi
+N_F\eta(1+\frac{x}{a\eta}))}\bigr)
+{}\nonumber\\{}&-\frac{\gamma}{\pi^2 (x^2-b^2\eta^2)}
+\bigl(\cos{(2\pi (N_F-N_F(a))\frac{x}{a})}-\cos{(2\pi
+N_F\eta(1-\frac{x}{a\eta}))}) \bigr)\ .
+\end{align}
 
 
 %{
@@ -904,12 +937,12 @@ The total probability is therefore approximatively equal to a sum
 of the two diffraction curves centered at $\pm b\eta$ modulated by
 an interference term which oscillates rapidly with a relatively
 small amplitude, c.f. Fig 4c :
-\begin{eqnarray} \label{P2slApprox3}
-P^{(2 slit)}(x;a,b) &\simeq & \frac{2\gamma}{\pi^2 (x\mp b\eta)^2}
-\sin^2 \left(\pi N_F \eta (1\mp\frac{x}{b\eta}) \right) +
-O(\frac{1}{x^2-b^2\eta^2}),\ |x\pm b\eta| > \frac{\lambda L}{2a}\
+\begin{multline} \label{P2slApprox3}
+P^{(2 slit)}(x;a,b) \simeq  \frac{2\gamma}{\pi^2 (x\mp b\eta)^2}
+\sin^2 \left(\pi N_F \eta (1\mp\frac{x}{b\eta}) \right)  +
+O(\frac{1}{x^2-b^2\eta^2}), \\ |x\pm b\eta| > \frac{\lambda L}{2a}\
 .
-\end{eqnarray}
+\end{multline}
 %}
 
 Now, consider $N_F(a)\gg 1$. Since, unlike the previous cases, we
@@ -1086,7 +1119,7 @@ experiments,'' Am. Journ. Phys. {\bf 79} (6), 615--618 (2011).
 Am. J. Phys. \textbf{60}, 896-899 (1992).
 
 \bibitem{Fanaro} M. Fanaro, M. Arlego, M. R. OTERO, ``A Didactic Proposed for Teaching the Concepts of
-Electrons and Light in Secondary School Using Feynman´s Path Sum Method'', European J of Physics Education
+Electrons and Light in Secondary School Using Feynman's Path Sum Method'', European J of Physics Education
 \textbf{3}:2, 1-11 (2012)
 
 \bibitem{Feynman2} R. P. Feynman, \textsl{Feynman's Thesis: A New Approach to Quantum Theory},
