--- a/helpers/fix-revtex-12.tex
+++ b/helpers/fix-revtex-12.tex
@@ -40,4 +40,14 @@
  \set@column@hsize\pagegrid@col
  \set@colht
 }%
+
+\def\frontmatter@abstractheading{%
+\bigskip
+ \begingroup
+  \centering\large
+  \abstractname
+  \par\bigskip
+ \endgroup
+}%
+
 \makeatother
