--- a/1110.2346/EJP_v1_MathieuBeau_14March2012_HAL.tex
+++ b/1110.2346/EJP_v1_MathieuBeau_14March2012_HAL.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt,aps,prb,preprint]{revtex4-1}   % style for Physical Review B and AJP are similar
+\documentclass[12pt]{article}   % style for Physical Review B and AJP are similar
 
 %\usepackage{amsmath,amsthm,amscd,amssymb}
 \usepackage[colorlinks=true
@@ -24,6 +24,8 @@ bookmarksopenlevel=10
 \input{../helpers/mnsymbol.tex}
 \input{../helpers/fix-underbrace.tex}
 
+\usepackage{cite}
+\usepackage[small]{titlesec}
 
 %\usepackage[dotinlabels]{titletoc}
 %\titlelabel{{\thetitle}.\quad}
@@ -47,10 +49,9 @@ bookmarksopenlevel=10
 \title{Feynman Integral and one/two slits electrons diffraction : an analytic study}
 %Lines break automatically or can be forced with \\
 \author{Mathieu Beau}
- \affiliation{School of Theoretical Physics, Dublin Institute for Advanced Studies, 10 Burlington Road,
-Dublin 4}
- \email{mbeau@stp.dias.ie}  
+
 \date{15 Mar 2012}
+\maketitle
 
 \begin{abstract}
 
@@ -69,7 +70,6 @@ mechanics.
 \end{abstract}
 
 
-\maketitle
 
 \section{Introduction}
 
@@ -303,11 +303,10 @@ e^{-\frac{x^2}{2\sigma_\nu^2}},\ \nu=1,2$, we have:
 \end{eqnarray}
 Hence, in (\ref{Kn}), we can calculate the integral with respect to $x_1$,
 changing variable to $x'_1=x_1-x_0$, obtaining:
-\begin{eqnarray*}
-&&\frac{1}{\sqrt{2i\pi \hbar\epsilon/m}}\int_{-\infty}^{\infty}\frac{dx_1}{\sqrt{2i\pi \hbar\epsilon/m}}
-e^{i\frac{m(x_{2}-x_{1})^2}{2\hbar\epsilon}}e^{i\frac{m(x_{1}-x_0)^2}{2\hbar\epsilon}}
-{}\\{}&=&\frac{1}{\sqrt{2i\pi \hbar(2\epsilon)/m}}e^{i\frac{m(x_{2}-x_0)^2}{2\hbar(2\epsilon)}}\ .
-\end{eqnarray*}
+\[
+\frac{1}{\sqrt{2i\pi \hbar\epsilon/m}}\int_{-\infty}^{\infty}\frac{dx_1}{\sqrt{2i\pi \hbar\epsilon/m}}
+e^{i\frac{m(x_{2}-x_{1})^2}{2\hbar\epsilon}}e^{i\frac{m(x_{1}-x_0)^2}{2\hbar\epsilon}}=\frac{1}{\sqrt{2i\pi \hbar(2\epsilon)/m}}e^{i\frac{m(x_{2}-x_0)^2}{2\hbar(2\epsilon)}}\ .
+\]
 Proceeding by recursion, we get (\ref{Kn}) :
 \begin{eqnarray*}
 K_0^{(n)}(x_n,t_n;x_0,t_0)&=&\frac{1}{\sqrt{2i\pi \hbar(n\epsilon)/m}}e^{i\frac{m(x_{n}-x_0)^2}{2\hbar(n\epsilon)}}\ ,
@@ -420,19 +419,19 @@ Now, let us compute the amplitude of the transition for the particle
 starting at the point $(x=0,z=0)$ at the time $t=0$,
 going through one slit at the position $(w,z=D),\ b-a<w<b+a$ at the time $t=T$
 and arriving at the position $(x,z=L+D)$ at the time $t=T+\tau$: 
-\begin{eqnarray*}
-K_{a,b}^{(2D)}((x,L+D),T+\tau;&&(0,0),0)
+\begin{multline*}
+K_{a,b}^{(2D)}((x,L+D),T+\tau; (0,0),0)
 \equiv\int_{-\infty}^{\infty}dw\ \chi_{[b-a,b+a]}(w)\times
-{}\nonumber\\{}&&K_0^{(2D)}\left((x,L+D),T+\tau;(w,D),\tau\right)K_0^{(2D)}\left((w,D),\tau;(0,0),0\right)\ .
-\end{eqnarray*}
+\\ \times K_0^{(2D)}\!\!\left((x,L+D),T+\tau;(w,D),\tau\right)K_0^{(2D)}\!\!\left((w,D),\tau;(0,0),0\right)\ .
+\end{multline*}
 Hence, the explicite formula is given by:
-\begin{eqnarray}\label{K2DFormula}
-K_{a,b}^{(2D)}((x,L+D),&&T+\tau;(0,0),0)=
-{}\nonumber\\{}&&\frac{e^{i\frac{mD^2}{2\hbar T}}}{\sqrt{2i\pi\hbar T/m}} 
-\frac{e^{i\frac{m L^2}{2\hbar\tau}}}{\sqrt{2i\pi\hbar\tau/m}}
-\int_{b-a}^{b+a}dw\ \frac{e^{i\frac{m (x-w)^2}{2\hbar\tau}}}{\sqrt{2i\pi\hbar\tau/m}}
+\begin{multline}\label{K2DFormula}
+K_{a,b}^{(2D)}((x,L+D), T+\tau;(0,0),0)=
+\frac{e^{i\frac{mD^2}{2\hbar T}}}{\sqrt{2i\pi\hbar T/m}} 
+\frac{e^{i\frac{m L^2}{2\hbar\tau}}}{\sqrt{2i\pi\hbar\tau/m}} \times\\
+\times \int_{b-a}^{b+a}dw\ \frac{e^{i\frac{m (x-w)^2}{2\hbar\tau}}}{\sqrt{2i\pi\hbar\tau/m}}
 \frac{e^{i\frac{m w^2}{2\hbar T}}}{\sqrt{2i\pi\hbar T/m}}\ .
-\end{eqnarray}
+\end{multline}
 Consequently, the two-dimensional propagator is the product of two independant 
 one-dimensional propagators in the $x$ and in the $z$-directions, 
 and since the propagator in $z$-direction is a constante 
@@ -467,23 +466,22 @@ Then we find the amplitude corresponding to the transition
 between the position $(x=0,z=0)$ at the time $t=0$ 
 and the position $(x,z=L+D)$ at the time $t=T+\tau$, 
 knowing that the position in the $z$-direction is $D$ at the time $t=T$ :
-\begin{eqnarray*}
-K_{\infty}^{(2D)}((x,L+D),T+\tau;&&(0,0),0)
-{}\\{}&&=K_{0,x}\left(x,T+\tau;0,0\right)K_{0,z}\left(L+D,T+\tau;D,\tau\right)K_{0,z}\left(D,T;0,0\right)\ ,
-\end{eqnarray*}
+\begin{multline*}
+K_{\infty}^{(2D)}((x,L+D),T+\tau; (0,0),0) =K_{0,x}\left(x,T+\tau;0,0\right) \times \\ \times K_{0,z}\left(L+D,T+\tau;D,\tau\right)K_{0,z}\left(D,T;0,0\right)\ ,
+\end{multline*}
 where $K_{o,X}(X',t';X,t)=(m/2i\pi\hbar(t'-t))^{1/2}\exp{\left(im(X'-X)^2/(2\hbar(t'-t))\right)},\ X=x,z,$ 
 are the 1-dimensional free propagators.
 Then, integrating over the intermediate positions $D$ between $-\infty$ and $+\infty$,
 we find the two dimensional free propagator (\ref{K2D}) between $(x=0,z=0)$ at $t=0$
 and $(x,z=L+D)$ at the time $t=\tau+T$:
-\begin{eqnarray*}
-\int_{-\infty}^{\infty}dD\ K_{\infty}^{(2D)}&&((x,z=L+D),T+\tau;(0,0),0)
-{}\\{}&&=\int_{-\infty}^{\infty}dD\ \frac{e^{i\frac{mD^2}{2\hbar T}}}{\sqrt{2i\pi\hbar T/m}} 
+\begin{align*}
+\int_{-\infty}^{\infty}dD {K_{\infty}^{(2D)}((x,z=L+D),T+\tau;(0,0),0)}&{}\\
+&=\int_{-\infty}^{\infty}dD\ \frac{e^{i\frac{mD^2}{2\hbar T}}}{\sqrt{2i\pi\hbar T/m}} 
 \frac{e^{i\frac{m (z-D)^2}{2\hbar\tau}}}{\sqrt{2i\pi\hbar\tau/m}}
 \frac{e^{i\frac{m x^2}{2\hbar (T+\tau)}}}{\sqrt{2i\pi\hbar (T+\tau)/m}}\ ,
-{}\\{}&&=\left(\frac{m}{2i\pi\hbar (T+\tau)}\right)e^{i\frac{m (x^2+z^2)}{2\hbar (T+\tau)}}
-{}\\{}&&= K_0^{(2D)}((x,z),T+\tau;(0,0),0)\ ,
-\end{eqnarray*} 
+{}\\{}&=\left(\frac{m}{2i\pi\hbar (T+\tau)}\right)e^{i\frac{m (x^2+z^2)}{2\hbar (T+\tau)}}
+{}\\{}&= K_0^{(2D)}((x,z),T+\tau;(0,0),0)\ ,
+\end{align*} 
 to get the result, we have used the convolution formula between two Gaussians (\ref{GaussianConvo}).
 
 \section{The exact result in terms of a Fresnel integral}
