--- a/1110.2346/EJP_v1_MathieuBeau_14March2012_HAL.tex
+++ b/1110.2346/EJP_v1_MathieuBeau_14March2012_HAL.tex
@@ -77,8 +77,8 @@ The quantum mechanical problem of diffraction and interference of
 massive particles is discussed, though without detailed formulas,
 by Feynman in his famous lecture notes.\cite{Feynman} A more
 exact treatment, though still lacking in detail, is in his book
-with Hibbs.\cite{FH} It was first observed experimentally by
-J\"onsson in 1961.\cite{Jonsson} Moreover, there are also
+with Hibbs \cite{FH}. It was first observed experimentally by
+J\"onsson in 1961 \cite{Jonsson}. Moreover, there are also
 experiments for neutrons diffraction for single and double slit 
 (see \cite{Zeilinger} and the references therein)
 and in quantum optics about interference between photons,
@@ -107,7 +107,7 @@ Fresnel number, affect the form of the diffraction and
 interference images. There exists some pedagogical papers 
 about the multiple slit experiments 
 (see e.g. \cite{Frabboni} for experimental and numerical discussions
-and, \cite{Barut} for theoretical discussions using path integral formulation),
+and \cite{Barut} for theoretical discussions using path integral formulation),
 but surprisingly the approximations obtained in the Section V has never been published.
 
 
@@ -136,7 +136,7 @@ the analogy between quantum mechanics and optics.
 Moreover, there is an interesting article that has recently been published 
 in the \textit{European Journal of Physics Education}
 that discusses using the Feynman path integral approach in secondary schools 
-to teach the double slit experiment.\cite{Fanaro} 
+to teach the double slit experiment \cite{Fanaro}.
 
 
 
@@ -324,7 +324,7 @@ Note that for reasons to be discussed below,
 we shall not make use of the 3-dimensional propagator in the example 
 of election diffraction for one and two slits. 
 We remark for completeness, that the propagator (\ref{Kfree})
-can be calculate by other methods, for example.\cite{Kleinert}
+can be calculate by other methods, for example \cite{Kleinert}.
 
 
 \section{Application to the Problem of Electron Diffraction and Interference}
@@ -387,7 +387,7 @@ that the propagator is a product of two independant propagator
 in both directions $x$ and $z$, where the last one is equal to a constant.
 
 
-To see that, let us discuss the conceptual experiment for one slit.\cite{FH} 
+To see that, let us discuss the conceptual experiment for one slit \cite{FH}.
 We consider that the problem is divided 
 in two separate motions, one starting from the source to the slit during the time $T$
 and the other one starting from the slit to the screen during the time $\tau$. 
@@ -655,7 +655,7 @@ P^{(1 Slit)}(x;a)&\simeq&\frac{2\gamma}{\pi^2 x^2} \sin^2{(\pi
 N_F(a) \frac{x}{a})},\ (N_F(a)\ll1,\ x/a\eta\gg 1)\ ,
 \end{eqnarray}
 In this case we are in the so-called \textit{Fraunhofer regime}
-analogous to plane wave diffraction in optics.\cite{Optics} In
+analogous to plane wave diffraction in optics \cite{Optics}. In
 fact, notice that the distance between fringes is
 $a/N_F(a)=\lambda_z L/2a$, c.f. Fig 3a.
 
@@ -839,7 +839,7 @@ I_{12}(x;a,b)&=A_1(x;a,b)A_2(x;a,b)^* + A_2(x;a,b) A_1(x;a,b)^*
 \end{align}
 Notice that there is an additional term compared to the
 single-slit case called the \textit{interference term}, which is
-of course quite similar to that in optics.\cite{Optics} This
+of course quite similar to that in optics \cite{Optics}. This
 results in a modulation effect of the curve given by (\ref{P2}) by
 the sum of the diffraction terms (\ref{P1P2}) (modulo a
 multiplicative factor), see Fig. 4.
@@ -976,7 +976,7 @@ where one can observe the absence of fringes in a band. However,
 this phenomenon is not apparent on the corresponding experimental
 image. This is probably due to the difference in defocussing
 between the calculated and experimental images, see Fig. 3b and
-Fig. 4b of the Reference.\cite{Frabboni} Indeed, the existence of such a band
+Fig. 4b of the Reference \cite{Frabboni}. Indeed, the existence of such a band
 is quite sensitive to the value of the parameter $N_F(a)$.
 
 \begin{figure}[h]
