--- a/1110.2346/EJP_v1_MathieuBeau_14March2012_HAL.tex
+++ b/1110.2346/EJP_v1_MathieuBeau_14March2012_HAL.tex
@@ -17,8 +17,7 @@ bookmarksopenlevel=10
 }
 \usepackage[noBBpl,sc]{mathpazo}
 \usepackage[papersize={7.2in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
-\tolerance=2000
-\hbadness=2000
+\tolerance=10000
 
 % these include amsmath and that can cause trouble in older docs.
 \input{../helpers/mnsymbol.tex}
@@ -364,7 +363,7 @@ functions (for the Gaussian function model, see Ref. \cite{FH}):
 \end{eqnarray}
 The question is: what is the probability of finding the electron
 at the point $ x $ on the screen knowing that it started at the
-point $ (x = 0, z = 0) $? More precisely, suppose that the
+point $(x=0, z=0) $? More precisely, suppose that the
 source emits electrons in large numbers, though small enough so
 that the distance between electrons is such that interactions
 can be neglected (no correlations). What is the intensity of
@@ -475,7 +474,7 @@ Then, integrating over the intermediate positions $D$ between $-\infty$ and $+\i
 we find the two dimensional free propagator (\ref{K2D}) between $(x=0,z=0)$ at $t=0$
 and $(x,z=L+D)$ at the time $t=\tau+T$:
 \begin{align*}
-\int_{-\infty}^{\infty}dD {K_{\infty}^{(2D)}((x,z=L+D),T+\tau;(0,0),0)}&{}\\
+\rlap{$\displaystyle \int_{-\infty}^{\infty}dD {K_{\infty}^{(2D)}((x,z=L+D),T+\tau;(0,0),0)}=$}\phantom{KKKKKKK}&{}\\
 &=\int_{-\infty}^{\infty}dD\ \frac{e^{i\frac{mD^2}{2\hbar T}}}{\sqrt{2i\pi\hbar T/m}} 
 \frac{e^{i\frac{m (z-D)^2}{2\hbar\tau}}}{\sqrt{2i\pi\hbar\tau/m}}
 \frac{e^{i\frac{m x^2}{2\hbar (T+\tau)}}}{\sqrt{2i\pi\hbar (T+\tau)/m}}\ ,
