--- a/1110.2346/EJP_v1_MathieuBeau_14March2012_HAL.tex
+++ b/1110.2346/EJP_v1_MathieuBeau_14March2012_HAL.tex
@@ -423,7 +423,7 @@ K_{a,b}^{(2D)}((x,L+D),T+\tau; (0,0),0)
 \equiv\int_{-\infty}^{\infty}dw\ \chi_{[b-a,b+a]}(w)\times
 \\ \times K_0^{(2D)}\!\!\left((x,L+D),T+\tau;(w,D),\tau\right)K_0^{(2D)}\!\!\left((w,D),\tau;(0,0),0\right)\ .
 \end{multline*}
-Hence, the explicite formula is given by:
+Hence, the explicit formula is given by:
 \begin{multline}\label{K2DFormula}
 K_{a,b}^{(2D)}((x,L+D), T+\tau;(0,0),0)=
 \frac{e^{i\frac{mD^2}{2\hbar T}}}{\sqrt{2i\pi\hbar T/m}} 
@@ -433,7 +433,7 @@ K_{a,b}^{(2D)}((x,L+D), T+\tau;(0,0),0)=
 \end{multline}
 Consequently, the two-dimensional propagator is the product of two independant 
 one-dimensional propagators in the $x$ and in the $z$-directions, 
-and since the propagator in $z$-direction is a constante 
+and since the propagator in $z$-direction is a constant 
 (see the right hand sides of (\ref{K2DFormula})):
 \begin{eqnarray}\label{Kz}
 K_z(L+D,T+\tau;0,0)=\frac{e^{i\frac{mD^2}{2\hbar T}}}{\sqrt{2i\pi\hbar T/m}}
@@ -530,17 +530,18 @@ Notice that :
 T})(y-\frac{x}{1+\tau/T})^2 + \frac{mx^2}{2\hbar(T+\tau)}\ ,
 \end{eqnarray*}
 and hence,
-\begin{eqnarray}\label{A1C1}
-A_1(x;a,b)&=&\frac{e^{i\frac{mx^2}{2\hbar
+\begin{align}\label{A1C1}
+A_1(x;a,b)&=\frac{e^{i\frac{mx^2}{2\hbar
 (T+\tau)}}}{\sqrt{2i\pi \hbar (T+\tau)/m}}\int_{b-a}^{b+a} dw
 \sqrt{\frac{T+\tau}{2i\pi \hbar
-T\tau/m}}\exp{\bigl(i(\frac{T+\tau}{2\hbar
+T\tau/m}}\times \nonumber \\
+&\quad \times \exp{\bigl(i(\frac{T+\tau}{2\hbar
 T\tau/m})(w-\frac{x}{1+\tau/T})^2\bigr)}
-{}\nonumber\\{}&=&\frac{e^{i\frac{mx^2}{2\hbar
+{}\nonumber\\{}&=\frac{e^{i\frac{mx^2}{2\hbar
 (T+\tau)}}}{\sqrt{(2i)^2\pi \hbar
 (T+\tau)/m}}\int_{\alpha_{-}^{(1)}(x)}^{\alpha_{+}^{(1)}(x)} dw'
 \exp{\left(\frac{i\pi}{2} w'^2\right)},
-\end{eqnarray}
+\end{align}
 where
 \begin{eqnarray}\label{alpha1}
 &&\alpha_{\pm}(x;a,b)\equiv\sqrt{\frac{(T+\tau)}{\pi \hbar
