--- a/1801.00268/1801.00268.tex
+++ b/1801.00268/1801.00268.tex
@@ -1,8 +1,7 @@
 % ----------------------------------------------------------------   MS-LaTeX Paper
 % ----------------------------------------------------------------
 
-\documentclass[12pt]{article}
-\usepackage[noBBpl,sc]{mathpazo}
+\documentclass[11pt]{article}
 
 \usepackage[stable]{footmisc}
 \usepackage{amsfonts}
@@ -25,6 +24,7 @@
 %\usepackage[usenames,dvipsnames]{colortbl}
 %\usepackage{hyperref}
 
+\sloppy
 
 %\usepackage{amsmath,amsthm,amscd,amssymb}
 \usepackage[colorlinks=true
@@ -41,8 +41,7 @@ bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
-\linespread{1.05}
-\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\usepackage[papersize={6.5in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
 \tolerance=2000
 \hbadness=2000
 
