--- a/quant-ph-0508202/quant-ph-0508202.tex
+++ b/quant-ph-0508202/quant-ph-0508202.tex
@@ -1,4 +1,19 @@
-\documentclass{article}
+\documentclass[11pt]{article}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
 
 \makeatletter
 
@@ -610,8 +625,6 @@ PROGRESS IN OPTICS XXXVI, pp. 245-294 \\
 
 \@ifundefined{ttfam}{\let\bckslash\backslash}{\mathchardef\bckslash "075C}
 \@ifundefined{bi}{\def\bi{\bf}}{\relax} \@ifundefined{tt}{\let\tt\rm}{} \ps@headings
-
-\textheight=39.25pc \textwidth=27pc \headsep 12pt \topskip = 10pt \footskip 12pt \marginparwidth 48pt
 
 \widowpenalty 10000
 \parindent1em
