--- a/quant-ph-0508202/quant-ph-0508202.tex
+++ b/quant-ph-0508202/quant-ph-0508202.tex
@@ -21,6 +21,7 @@ bookmarksopenlevel=10
 
 \mathchardef\bckslash "075C
 
+
 \def\bksl;{{\ifmmode \bckslash \else $\bckslash$\relax \fi}}% backslash
 \def\pmS{\setbox0\hbox{\S}\copy0\kern-.95\wd0\copy0\kern-.92\wd0\box0\relax}% poor man's bold section sign
 \def\br>#1\endbr>{#1}% reference markers
@@ -453,7 +454,7 @@ PROGRESS IN OPTICS XXXVI, pp. 245-294 \\
 
                 \gdef\chapno{X}\relax           % chapter number not known
                 \vskip 5\baselineskip
-                {\bf \chapno}
+                %{\bf \chapno}
                 \vskip 2\baselineskip
                 \markleft{FULL}\relax
                 \wideheadfalse
@@ -545,70 +546,11 @@ PROGRESS IN OPTICS XXXVI, pp. 245-294 \\
 
 %%% Reference system adapted
 
-%%% Changed 18 March 1996
-      \def\thebibliography#1{\@nosecnotrue
-      \gdef\thesection{}\relax
-      \section{\refname}\relax
-      \begingroup
-       \tolerance 9999
-       \hbadness 9999
-       \widowpenalty 10000
-       \clubpenalty 200
-       \small}
-%%%
-
-\def\endthebibliography{\endgroup
-  \def\@noitemerr{\@warning{Empty `thebibliography' environment}}%
-  \endlist}
-
-\def\bibitem{\@ifnextchar[{\@lbibitem}{\@bibitem}}
-
-\def\@lbibitem[#1]#2{\@putbiblabel{#1}\if@filesw
-      {\def\protect##1{\string ##1\space}\immediate
-       \write\@auxout{\string\bibcite{#2}{#1}}}\fi\ignorespaces}
-
-\def\@putbiblabel#1{\par\noindent #1\par\nobreak\noindent \hangindent=1em
-                    \hangafter=0 \relax}
-
-\def\@bibitem#1{\item\if@filesw \immediate\write\@auxout
-       {\string\bibcite{#1}{\the\value{\@listctr}}}\fi\ignorespaces}
-
-\def\bibcite#1#2{\global\@namedef{b@#1}{#2}}
-
-\let\citation\@gobble
-
-\def\cite{\@ifnextchar [{\@tempswatrue\@citex}{\@tempswafalse\@citex[]}}
-
-%%% Changed 18 March 1996
-
-\def\@citex[#1]#2{\if@filesw\immediate\write\@auxout{\string\citation{#2}}\fi
-  \let\@citea\@empty
-  \@cite{\@for\@citeb:=#2\do
-    {\@citea\def\@citea{, }%
-     \def\@tempa##1##2\@nil{\edef\@citeb{\if##1\space##2\else##1##2\fi}}%
-     \expandafter\@tempa\@citeb\@nil
-     \@ifundefined{b@\@citeb}{{\reset@font\bf ?}\@warning
-       {Citation `\@citeb' on page \thepage \space undefined}}%
-     {\csname b@\@citeb\endcsname}}}{#1}}
-%%%
-
-\let\bibdata=\@gobble
-\let\bibstyle=\@gobble
-
-\def\bibliography#1{\if@filesw\immediate\write\@auxout{\string\bibdata{#1}}\fi
-  \@input{\jobname.bbl}}
-
-\def\bibliographystyle#1{\if@filesw\immediate\write\@auxout
-    {\string\bibstyle{#1}}\fi}
-
-\def\nocite#1{\@bsphack
-  \if@filesw\immediate\write\@auxout{\string\citation{#1}}\fi
-  \@esphack}
 
 %DEFAULT DEFINITIONS
 
 \def\@cite#1#2{{#1\if@tempswa , #2\fi}}
-\def\@biblabel#1{[#1]}
+\def\@biblabel#1{#1}
 
 \def\@listI{\leftmargin\leftmargini \parsep 0\p@ plus1\p@ minus\p@
 \topsep 0\p@ plus3\p@ minus\p@
@@ -625,6 +567,7 @@ PROGRESS IN OPTICS XXXVI, pp. 245-294 \\
 
 \@ifundefined{ttfam}{\let\bckslash\backslash}{\mathchardef\bckslash "075C}
 \@ifundefined{bi}{\def\bi{\bf}}{\relax} \@ifundefined{tt}{\let\tt\rm}{} \ps@headings
+\sloppy
 
 \widowpenalty 10000
 \parindent1em
@@ -639,6 +582,9 @@ University of Rochester, Rochester, NY 14627, USA }}
 \maketitle
 
 \tableofcontents
+\newpage
+\pagestyle{plain}
+
 \section{Introduction}
 
 Photon wave function is a controversial concept. Controversies stem from the
