--- a/helpers/fixarxiv-palatino.tex
+++ b/helpers/fixarxiv-palatino.tex
@@ -30,6 +30,6 @@ bookmarksopenlevel=10
 %\titlelabel{{\thetitle}.\quad}
 %\input{../helpers/psu-plain-titles.tex}
 %\input{../helpers/psu-sc-headers.tex}
-\input{../helpers/fix-revtex-12.tex}
+%\input{../helpers/fix-revtex-12.tex}
 %\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
 %\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
