--- a/1603.06008/1603.06008.tex
+++ b/1603.06008/1603.06008.tex
@@ -39,9 +39,9 @@ bookmarksopenlevel=10
 %\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
 %\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 
-
 \begin{document}
 
+\raggedbottom
 
 
 \hfill{UTTG-01-16 }
@@ -124,6 +124,8 @@ The answer to the first question is given in Section II, under the assumption th
 \end{equation}
 The second and third questions are answered in Section III, where we give a general solution of the Lindblad equation, under the conditions found in Section II.
 
+
+\newpage
 
 \pdfbookmark{NECESSARY CONDITIONS FOR A MEASUREMENT}{II}
 
