--- a/quant-ph-0212126/0212126v1.tex
+++ b/quant-ph-0212126/0212126v1.tex
@@ -191,11 +191,11 @@ observables correspond  to the self-adjoint operators in ${\cal
 H}.$ The pure states correspond  to the one-dimensional subspaces
 of ${\cal H}.$ An arbitrary state is described by the density
 operator, i.e. a positive operator with the unit trace. For the
-expectation value $<A>_{\rho}$ of the observable $A$ in the state
+expectation value $\langle A \rangle_{\rho}$ of the observable $A$ in the state
 described by the density operator $\rho$, we have the Born-von
 Neumann formula
 $$
-<A>_{\rho}=Tr (\rho A)
+\langle A \rangle_{\rho}=Tr (\rho A)
 $$
 
 \section{Measurements}
