--- a/1603.06008/1603.06008.tex
+++ b/1603.06008/1603.06008.tex
@@ -157,11 +157,11 @@ In order to separate the real and imaginary parts of general eigenvalues, let us
 {\rm Tr}\Big(v_k^\dagger v_k\Big)\,\lambda_k= {\rm Tr}\Big(v_k^\dagger {\cal L}v_k\Big)\;.
 \end{equation}
 A straightforward calculation gives
-\begin{eqnarray}
-&&{\rm Tr}\Big(v_k^\dagger v_k\Big){\rm Re}\lambda_k=-\frac{1}{2}{\rm Tr}\left(\sum_n [v_k\,,\,L_n^\dagger]^\dagger[v_k\,,\,L_n^\dagger]\right)\nonumber\\&&
-~~~~~-\frac{1}{2}{\rm Tr}\left(v_k v_k^\dagger \sum_n\Big(L_n^\dagger L_n-L_n L_n^\dagger\Big)\right)\\
-&&{\rm Tr}\Big(v_k^\dagger v_k\Big){\rm Im}\lambda_k=-{\rm Tr}\Big(v_k^\dagger [{\cal H},v_k]\Big)
-+{\rm Im}{\rm Tr}\sum_n L_nv_k^\dagger[v_k,L_n^\dagger ]\end{eqnarray}
+\begin{align}
+{\rm Tr}\Big(v_k^\dagger v_k\Big){\rm Re}\lambda_k &=-\frac{1}{2}{\rm Tr}\left(\sum_n [v_k\,,\,L_n^\dagger]^\dagger[v_k\,,\,L_n^\dagger]\right)\nonumber\\
+&\quad\quad-\frac{1}{2}{\rm Tr}\left(v_k v_k^\dagger \sum_n\Big(L_n^\dagger L_n-L_n L_n^\dagger\Big)\right)\\
+{\rm Tr}\Big(v_k^\dagger v_k\Big){\rm Im}\lambda_k &=-{\rm Tr}\Big(v_k^\dagger [{\cal H},v_k]\Big)
++{\rm Im}{\rm Tr}\sum_n L_nv_k^\dagger[v_k,L_n^\dagger ]\end{align}
 (See Appendix A.)  
 It is difficult to make further progress without invoking some assumption that limits the nature of the $L_n$.  As mentioned in Sec. I, we shall assume that the $L_n$ satisfy the necessary and sufficient condition (5) for non-decreasing entropy.  In this case, Eq.~(10) simplifies to 
 \begin{equation}
