--- a/quant-ph-0004067/quant-ph-0004067.tex
+++ b/quant-ph-0004067/quant-ph-0004067.tex
@@ -1,4 +1,40 @@
-\documentclass{article}
+\documentclass[12pt]{article}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\linespread{1.05}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/mnsymbol.tex}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 
 \begin{document}
 
@@ -6,7 +42,7 @@
 \author{Philip Pearle\\
 Hamilton College\\
 Clinton, NY 13323}
-\date{}
+\date{6 Jun 2000}
 \maketitle
 
 \begin{abstract}
@@ -255,7 +291,7 @@ One must conclude that the hypothesis is untenable and
 that energy-momentum will generally not be conserved if the collapse postulate is applied. 
 
 
-\section{A Collapse Model and Nonconservation\\ of Energy-Momentum}\label{Intro}
+\section{A Collapse Model and Nonconservation of Energy-Momentum}\label{Intro}
 
 
 \hspace{\parindent}Dynamical collapse models replace the collapse postulate of SQT by a modified 
