--- a/quant-ph-0612187/zeno_itano_2.tex
+++ b/quant-ph-0612187/zeno_itano_2.tex
@@ -1,12 +1,50 @@
-\documentclass[letterpaper]{jpconf}
+\documentclass[12pt]{article}
 \usepackage{graphicx}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\linespread{1.05}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
+
+% these include amsmath and that can cause trouble in older docs.
+%\input{../helpers/mnsymbol.tex}
+%\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+
+
 \begin{document}
 \title{Perspectives on the quantum Zeno paradox\footnote{Work of the U.S. government.  Not subject to U.S. copyright}}
 \author{Wayne M. Itano}
+\maketitle
 
-\address{Time and Frequency Division, National Institute of Standards and Technology, Boulder, CO 80305 USA}
+%\address{Time and Frequency Division, National Institute of Standards and Technology, Boulder, CO 80305 USA}
 
-\ead{itano@boulder.nist.gov}
+%\ead{itano@boulder.nist.gov}
 
 \begin{abstract}
 As of October 2006, there were approximately 535 citations to the
