--- a/1906.04313/BellPaperRevision.tex
+++ b/1906.04313/BellPaperRevision.tex
@@ -67,7 +67,7 @@ bookmarksopenlevel=10
 \author{N. Argaman}
 \email{argaman@mailaps.org}
 \affiliation{Department of Physics, Nuclear Research Center---Negev, P.O. Box 9001, Be'er Sheva 84190, Israel}
-\date{\today}       % Activate to display a given date or no date
+\date{18 Feb 2020}       % Activate to display a given date or no date
 
 \begin{abstract}
 
