--- a/1912.06462/sd16.tex
+++ b/1912.06462/sd16.tex
@@ -23,11 +23,7 @@ bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
 %\usepackage{amssymb}
-\usepackage[full]{textcomp}
-\usepackage[osf]{XCharter}% lining figures in math, osf in text
-\usepackage[scaled=1.04,varqu,varl]{inconsolata}% inconsolata typewriter
-\usepackage[xcharter,vvarbb,scaled=1.03,smallerops,bigdelims]{newtxmath}
-\usepackage[cal=cm]{mathalpha}
+\usepackage[noBBpl,sc]{mathpazo}
 \linespread{1.05}
 \usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
 %\usepackage[letterpaper, margin=1.2in]{geometry}
@@ -97,6 +93,8 @@ misleads us. Superdeterminism is a promising approach not only to solve the meas
 nonlocality of quantum physics. Most importantly, we will discuss how it may be possible to test this hypothesis in an (almost) model independent way.
 
 \end{abstract}
+
+\newpage
 
 \section{Introduction}
 
